# influx-aggregator

./: .env-dev  .env.dev  .env.production  .gitignore  .pylintrc  README.md  pyproject.toml  solarserial.ino
.github/workflows/: pylint.yml  status_checks.yml
influx_aggregator/: aggregator.py  battery.py  dashboard.json  icons.py  motor.py  payload.py  serial_scanner.py  testbench.py  tire_pressure.py
