[tool.poetry]
name = "influx-aggregator"
version = "0.1.0"
description = ""
authors = ["Divyank Shah <divyank.shah.2016@gmail.com>"]
readme = "README.md"
packages = [{include = "influx_aggregator"}]

[tool.poetry.dependencies]
python = "^3.10"
influxdb-client = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
